--- a/Bootstrap+Dersleri/float.html
+++ b/Bootstrap+Dersleri/float.html
@@ -12,7 +12,7 @@
 		padding: 20px;
 	}
 </style>
-<title>Hello, world!</title>
+<title>Display</title>
 <body>
 	<button type="button" class="btn btn-primary">BUTON</button>
 	<br>
